--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@mui/material": "^5.10.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-spacer": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
