--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
+    "antd": "^5.0.5",
+    "antd-grid-layout": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
